--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -162,8 +162,57 @@
 
     <!--My Photos-->
     <div class = "container container_photos">
-
+        <h2 class = "titulo" id = "about">My photos</h2>
+        <hr style="width:200px" class = "linha">
+        <div class = "photo_ct">
+            <img class = "photo" src="img/img1.jpg" alt="foto 1">
+            <img class = "photo" src="img/img2.jpg" alt="foto 1">
+            <img class = "photo" src="img/img3.jpg" alt="foto 1">
+        </div>
+        <div class = "photo_ct">
+            <img class = "photo" src="img/img4.jpg" alt="foto 1">
+            <img class = "photo" src="img/img5.jpg" alt="foto 1">
+            <img class = "photo" src="img/img6.jpg" alt="foto 1">
+        </div>
     </div>
     
+    <!--Contact me-->
+    <div class = "container container_contact">
+        <h2 class = "titulo" id = "about">Contact me</h2>
+        <hr style="width:200px" class = "linha">
+        <div class = "contact_info">
+            <div class = "contact_content">
+                <img src = "img/icone1.svg" alt="local icon">
+                <p class = "texto">Chicago US</p>
+            </div>
+            <div class = "contact_content">
+                <img src = "img/icone2.svg" alt="local icon">
+                <p class = "texto">Phone: +00 151515</p>
+            </div>
+            <div class = "contact_content">
+                <img src = "img/icone3.svg" alt="local icon">
+                <p class = "texto">Email: mail@mail.com</p>
+            </div>
+        </div>
+
+        <div class = "contact_msg">
+            <div>
+                <input class="formu" type="text" placeholder="Name" required name="Name">
+                <input class="formu" type="text" placeholder="Email" required name="Email">
+                <input class="formu" type="text" placeholder="Subject" required name="Subject">
+                <input class="formu" type="text" placeholder="Mensage" required name="Mensage">
+            </div>
+            <button class = "botao">Send Mensage</button>
+        </div>
+    </div>
+
+    <footer class = "container">
+        <div class = "rodape">
+                <a href: "#"><img class = "icone" src="img/facebook.svg" alt="rede social"></a>
+                <a href: "#"><img class = "icone" src="img/twitter.svg" alt="rede social"></a>
+                <a href: "#"><img class = "icone" src="img/instagram.svg" alt="rede social"></a>
+        </div>
+</footer>
+
 </body>
 </html>
